--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coursera Lab1</title>
 </head>
+
 <body>
-    
+    <main>
+        <h1>Hello world from Coursera Lab1</h1>
+        <ul>
+            <li>
+                <a href="#one">go to 1</a>
+            </li>
+            <li>
+                <a href="#two">go to 2</a>
+            </li>
+            <li>
+                <a href="#three">go to 3</a>
+            </li>
+            <li>
+                <a href="#four">go to reference</a>
+            </li>
+        </ul>
+        <figure id="one">
+            <img src="./asset/image/one-688064_960_720.webp" alt="one" width="25%">
+            <figcaption>One</figcaption>
+        </figure>
+        <figure id="two">
+            <img src="./asset/image/pngtree-2-two-number-vector-design-png-image_5872358.png" alt="tưo" width="25%">
+            <figcaption>Two</figcaption>
+        </figure>
+        <figure id="three">
+            <img src="./asset/image/pngtree-blue-number-3-png-image_6044379.png" alt="three" width="25%">
+            <figcaption>three</figcaption>
+        </figure>
+        <a href="https://www.w3schools.com/html/" id="four">reference</a>
+    </main>
 </body>
+
 </html>
